// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ecl-media-container renders correctly in full width 1`] = `
<ecl-media-container full-width="" image="https://inno-ecl.s3.amazonaws.com/media/examples/example-image.jpg" image-alt="Alternative text">
  <!---->
  <!--s-nt-
              caption for the media container
            -->
  <div class="ecl-media-container">
    <figure class="ecl-media-container--full-width ecl-media-container__figure">
      <ecl-picture>
        <!---->
        <picture class="ecl-media-container__picture ecl-picture sc-ecl-media-container-ec" data-ecl-auto-initialized="true" data-picture-focal-point="center">
          <img alt="Alternative text" class="ecl-media-container__media sc-ecl-media-container-ec" src="https://inno-ecl.s3.amazonaws.com/media/examples/example-image.jpg" style="--ecl-image-anchor: center;">
        </picture>
      </ecl-picture>
    </figure>
  </div>
</ecl-media-container>
`;

exports[`ecl-media-container renders correctly with an embedded video 1`] = `
<ecl-media-container credit="@Copyright" ratio="16-9">
  <!---->
  <!--s-nt-
              caption for the media container
              -->
  <div class="ecl-media-container">
    <figure class="ecl-media-container__figure">
      <div class="ecl-media-container__media ecl-media-container__media--ratio-16-9 sc-ecl-media-container-ec">
        <iframe allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="" class="sc-ecl-media-container-ec" frameborder="0" height="197" slot="embedded-media" src="https://www.youtube.com/embed/fgi-GSCB6ho" title="New digital strategy" width="350"></iframe>
      </div>
    </figure>
  </div>
</ecl-media-container>
`;

exports[`ecl-media-container renders correctly with an html5 video 1`] = `
<ecl-media-container ratio="16-9" sources="[{&quot;src&quot;: &quot;https://vod.prd.commavservices.eu/01/275521/019813ec-13ce-7136-ac0d-d7e24fec64c0/1080p-qaa.mp4&quot;, &quot;type&quot;: &quot;video/mp4&quot;}]">
  <!---->
  <!--s-nt-
              caption for the media container
            -->
  <div class="ecl-media-container" data-ecl-auto-initialized="true" data-ecl-media-container>
    <figure class="ecl-media-container__figure">
      <div class="ecl-media-container__video-wrapper">
        <ecl-video style-class="ecl-media-container__media sc-ecl-media-container-ec">
          <!---->
          <video class="ecl-media-container__media ecl-video sc-ecl-media-container-ec" controls="" data-ecl-media-container-video playsinline="">
            <source src="https://vod.prd.commavservices.eu/01/275521/019813ec-13ce-7136-ac0d-d7e24fec64c0/1080p-qaa.mp4" type="video/mp4">
          </video>
        </ecl-video>
      </div>
    </figure>
  </div>
</ecl-media-container>
`;

exports[`ecl-media-container renders correctly with an image 1`] = `
<ecl-media-container credit="@Copyright" image="https://inno-ecl.s3.amazonaws.com/media/examples/example-image.jpg" image-alt="Alternative text">
  <!---->
  <!--s-nt-
              caption for the media container
            -->
  <div class="ecl-media-container">
    <figure class="ecl-media-container__figure">
      <ecl-picture>
        <!---->
        <picture class="ecl-media-container__picture ecl-picture sc-ecl-media-container-ec" data-ecl-auto-initialized="true" data-picture-focal-point="center">
          <img alt="Alternative text" class="ecl-media-container__media sc-ecl-media-container-ec" src="https://inno-ecl.s3.amazonaws.com/media/examples/example-image.jpg" style="--ecl-image-anchor: center;">
        </picture>
      </ecl-picture>
    </figure>
  </div>
</ecl-media-container>
`;
